fix: table fixed z-index

--- a/style/web/components/table/_index.less
+++ b/style/web/components/table/_index.less
@@ -394,7 +394,7 @@
 
     .@{prefix}-table__cell--fixed-left,
     .@{prefix}-table__cell--fixed-right {
-      z-index: 100;
+      z-index: 9;
     }
 
     .@{prefix}-table__cell--fixed-left-last {
